# office365-rest-python-client

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README-dev.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  integration.yml  python-app.yml
.openclaw/: workspace-state.json
examples/: README.md
examples/auth/: README.md  gcc_high.py  interactive.py  interactive_custom.py  scopes.json  with_adal.py  with_client_cert.py  with_client_secret.py  with_client_secret_custom.py  with_device_flow.py  with_user_creds.py  with_user_creds_custom.py
examples/booking/: README.md  manage.py
examples/communications/: README.md  get_presence.py  set_presence.py  teams_presence_monitor.py
examples/data/: README.md  regions.json
examples/defender/: README.md  get_incident_details.py  get_secure_score.py  list_alerts.py  list_incidents.py  run_hunting_query.py  update_incident.py
examples/directory/: README.md
examples/entra-id/: README.md
examples/entraid/: README.md
examples/exchange/: README.md
examples/insights/: README.md  insights_report.py  list_shared.py  list_used.py
examples/intune/: README.md  get_organization.py  list_devices.py  terms_and_conditions.py
examples/licenses/: README.md  assign.py  find_licensed.py  modify_service_plans.py  remove.py  report.py  usage_report.py
examples/onedrive/: README.md  list_permissions_api.py
examples/onenote/: README.md  audit_notebook_structure.py  create_notebook.py  create_page.py  create_section.py  delete_notebook.py  get_page_content.py  list_notebooks.py  list_pages.py  list_recent_notebooks.py  list_section_groups.py  list_sections.py
examples/outlook/: README.md
examples/planner/: README.md  assign_task.py  create_bucket.py  create_plan.py  create_task.py  delete_plan.py  delete_task.py  get_task_details.py  list_buckets.py  list_plans.py  list_tasks.py  update_plan_details.py  update_task.py
examples/purview/: README.md  list_ediscovery_cases.py  list_retention_labels.py  list_subject_rights_requests.py
examples/reports/: README.md  email_activity_counts.py  get_app_user_counts.py  get_m365_app_user_detail.py  get_mfa_status.py  get_user_mfa_status.py  mailbox_usage_quota.py  mailbox_usage_storage.py  office_activations.py  onedrive_activity.py  onedrive_usage_storage.py  sharepoint_activity.py  sharepoint_site_usage.py  teams_team_counts.py  teams_user_activity.py  usage_reports.py
examples/security/: README.md  attack_simulation.py  run_hunting_query.py
examples/sharepoint/: README.md  auth_cookies.py  disable_ssl.py  print_server_settings.py  print_version.py  read_resource_no_model.py  run_test_perf.py  run_test_rate_limit.py  set_proxy.py
examples/teams/: README.md  archive.py  archive_lifecycle.py  audit_guest_access.py  audit_lifecycle.py  audit_orphan_owners.py  audit_team_settings.py  audit_teams_overview.py  call_records.py  clone_team.py  create_from_group.py  create_team.py  delete_team.py  does_user_have_access.py  export_membership.py  find_empty_teams.py  find_excessive_admins.py  find_inactive_channels.py  list_all.py  list_channel_messages.py  list_my_teams.py  online_meetings.py  reply_message.py  send_message.py  teams_membership.csv  unarchive.py  update_settings.py
examples/todo/: README.md  cleanup_completed.py  list_task_lists.py  manage.py  tasks_due_soon.py
generator/: generate_model.py  import_metadata.py  requirements.txt  settings.cfg  settings.graph.cfg  settings.sharepoint.cfg
generator/.checkpoints/: Graph.xml.json  SharePoint.xml.json
generator/builders/: collector.py  dependency_builder.py  loader.py  member.py  member_builder.py  method_builder.py  property.py  property_builder.py  template_context.py  type.py  type_builder.py
generator/documentation/: baseservice.py  graphdocsservice.py  sharepointdocsservice.py
generator/metadata/: Graph.xml  SharePoint.xml
generator/templates/: entity_type.py  enum_type.py
notebooks/: README.md
notebooks/sharepoint/: README.md  governance_report.ipynb  permissions_audit.ipynb
office365/: akamai_attack_group_action_model.py  akamai_custom_rule_model.py  akamai_rapid_rules_model.py  akamai_verified_details_model.py  application_risk_score.py  assignment_order.py  authentication_attribute_collection_input_configuration.py  authentication_attribute_collection_option_configuration.py  authentication_attribute_collection_page.py  authentication_attribute_collection_page_view_configuration.py  authentication_configuration_validation.py  azure_ad_token_authentication.py  azure_env.py  cloud_flare_rule_model.py  cloud_flare_ruleset_model.py  cloud_flare_verified_details_model.py  cloud_pc_launch_detail.py  cloud_pc_windows_setting.py  count_collection.py  custom_extension_behavior_on_error.py  custom_extension_overwrite_configuration.py  data_subject.py  delta_collection.py  delta_path.py  device_protection_overview.py  entity.py  entity_collection.py  fallback_to_microsoft_provider_on_error.py  fraud_protection_configuration.py  fraud_protection_provider_configuration.py  generic_error.py  graph_client.py  graph_request.py  graph_version.py  http_request_endpoint.py  include_target.py  intune_brand.py  key_value_pair.py  logger.py  microsoft_managed_desktop.py  (+50 more)
office365/admin/: admin.py  people_settings.py  sharepoint.py  sharepoint_settings.py
office365/backuprestore/: artifactrestorestatus.py  backupserviceconsumer.py  backupservicestatus.py  destinationtype.py  disablereason.py  restorableartifact.py  restoreartifactsbulkrequeststatus.py  restorejobtype.py  root.py
office365/booking/: appointment.py  availability.py  availabilityitem.py  availabilitywindow.py  chedulingpolicy.py  pageaccesscontrol.py  pagesettings.py  phone.py  phonetype.py  pricetype.py  questionanswer.py  questionassignment.py  reminder.py  reminderrecipients.py  service.py  type.py  (+7 more)
tests/: __init__.py  config.py  conftest.py  decorators.py  graph_case.py  selfsigncert.crt  selfsigncert.pem  settings.cfg  settings.py  test_graph_client.py
(+4984 files in other folders)
