[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.9,<0.10" ]

[project]
name = "office365-rest-python-client"
version = "2.6.2"
description = "Microsoft 365 & Microsoft Graph Library for Python"
readme = "README.md"
license = { file = "LICENSE" }
maintainers = [
  { name = "Domenico Di Nicola", email = "dom.dinicola@gmail.com" },
]
authors = [
  { name = "Vladimir Kovalenko", email = "vvgrem@gmail.com" },
]
requires-python = ">=3.8.0"

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",

  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries",
]

dependencies = [
  "msal>=1.28,<2",
  "pytz>=2021.1",
  "requests>=2.32.4,<3",
  "typing-extensions>=4.5",
  # The codebase uses "Self" and "Required" available in the typing module
  # since Python 3.11. Therefore, typing_extensions is required as long
  # as office365-rest-python-client supports Python versions < 3.11.
  # On Python versions >= 3.11, typing_extensions re-exports these names
  # from the standard library typing module.
]
optional-dependencies.examples = [
  "faker",
]
optional-dependencies.ntlm = [
  "requests-ntlm",
]
urls.repository = "https://github.com/vgrem/office365-rest-python-client"

[dependency-groups]
dev = [
  "adal~=1.2.4",
  "astunparse~=1.6.3",
  "configparser~=5.0.2",
  "faker~=4.1.2",
  "pyproject-fmt",
  "pytest",
  "ruff",
]

[tool.uv.build-backend]
module-name = "office365"
module-root = ""

[tool.ruff]
line-length = 121
format.line-ending = "lf"
format.docstring-code-format = true

lint.select = [
  "A",     # flake8-builtins
  "ASYNC", # flake8-async
  "B",     # bugbear
  #"D",     # pydocstyle
  "E", # pycodestyle
  "F", # pyflakes
  "I", # isort
  #"PGH", # pygrep-hooks
  "PIE", # flake8-pie
  "PL",  # pylint
  #"PTH", # flake8-pathlib
  "PYI", # flake8-pyi
  #"RUF", # ruff
  #"UP",  # pyupgrade
  "W", # pycodestyle
]
# Comments next to codes explain why they are ignored
# All these are subject to review and possible removal in the future
lint.ignore = [
  "B007",    # Loop control var not used in the loop body
  "B008",    # Do not perform function call in argument defaults; instead, perform the call within the function
  "B020",    # Loop control variable `self` overrides iterable it iterates
  "B904",    # Within an `except` clause, raise exceptions with `raise ... from err` or `raise ... from None`
  "D203",
  "D213",
  "E203",
  "E501",
  "PLC0415", # `import` should be at the top-level of a file
  "PLE0307", # `__str__` does not return `str`
  "PLR1714", # merge multiple comparisons
  "PLR2004", # Magic value used in comparison, consider replacing `2` with a constant variable
  "PLW1641", # Object does not implement `__hash__` method
  "PLW2901", # `for` loop variable `value` overwritten by assignment target
]
lint.per-file-ignores."examples/**/*.py" = [ "F401" ]
lint.per-file-ignores."office365/**/*.py" = [ "F401" ]
lint.per-file-ignores."tests/**/*.py" = [ "F401" ]

lint.pylint.max-args = 50
lint.pylint.max-branches = 16
lint.pylint.max-statements = 60
