[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.9,<0.10" ]

[project]
name = "office365-rest-python-client"
version = "2.6.2"
description = "Microsoft 365 & Microsoft Graph Library for Python"
readme = "README.md"
license = { file = "LICENSE" }
maintainers = [
  { name = "Domenico Di Nicola", email = "dom.dinicola@gmail.com" },
]
authors = [
  { name = "Vadim Gremyachev", email = "vvgrem@gmail.com" },
]
# With Python 3.10 we get support for "Type | None", instead of Optional[Type]
requires-python = ">=3.8.0"

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",

  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries",
]

dependencies = [
  "msal>=1.28,<2",
  "pyright>=1.1.408",
  "pytz>=2021.1",
  "requests>=2.32.4,<3",
  "typing-extensions>=4.5",
  # The codebase uses "Self" and "Required" available in the typing module
  # since Python 3.11. Therefore, typing_extensions is required as long
  # as office365-rest-python-client supports Python versions < 3.11.
  # On Python versions >= 3.11, typing_extensions re-exports these names
  # from the standard library typing module.
]
optional-dependencies.examples = [
  "faker",
]
optional-dependencies.ntlm = [
  "requests-ntlm",
]
urls.repository = "https://github.com/vgrem/office365-rest-python-client"

[dependency-groups]
dev = [
  "adal~=1.2.4",
  "astunparse~=1.6.3",
  "configparser~=5.0.2",
  "cryptography>=44.0.0",
  "faker~=4.1.2",
  "pyproject-fmt",
  "pytest",
  "ruff",
  "types-requests",
]

[tool.uv.build-backend]
module-name = "office365"
module-root = ""

[tool.ruff]
line-length = 121
src = [ "examples", "generator", "office365", "tests" ]

format.line-ending = "lf"
format.docstring-code-format = true
lint.select = [
  "A",     # flake8-builtins
  "ASYNC", # flake8-async
  "B",     # bugbear
  #"D",     # pydocstyle
  "E", # pycodestyle
  "F", # pyflakes
  "I", # isort
  #"PGH", # pygrep-hooks
  "PIE", # flake8-pie
  "PL",  # pylint
  #"PTH", # flake8-pathlib
  "PYI", # flake8-pyi
  #"RUF", # ruff
  #"UP",  # pyupgrade
  "W", # pycodestyle
]
lint.ignore = [
  "B008",    # Do not perform function call in argument defaults
  "PLC0415", # `import` should be at the top-level of a file (circular import workaround)
]

lint.pylint.max-args = 50
lint.pylint.max-branches = 16
lint.pylint.max-statements = 60

[tool.pyright]
include = ["office365"]
